add meta tags, lang attribute to h1, and add wrap everything in main landmark

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jacob Asper Portfolio (legacy)</title>
     <link rel="stylesheet" href="CSS/stylesheet.css">
   </head>
   <body>
-    <h1>Diseño grafico es mi pasion</h1>
-    <img src="Assets/sandwich cat.webp" alt="A dancing cat">
-    <span>hi</span>
-    <img src="Assets/Bingey.jpg" alt="A golden doodle wearing sunglasses">
-    <span>crickey</span>
-    <img src="Assets/burger.jpg" alt="A hamburger">
-    <span>burger</span>
-    <img src="Assets/Drawing.png" alt="A drawing of a stick figure">
-    <span>Jim</span>
+    <main>
+      <h1 lang="es">Diseño grafico es mi pasion</h1>
+      <img src="Assets/sandwich cat.webp" alt="A dancing cat">
+      <span>hi</span>
+      <img src="Assets/Bingey.jpg" alt="A golden doodle wearing sunglasses">
+      <span>crickey</span>
+      <img src="Assets/burger.jpg" alt="A hamburger">
+      <span>burger</span>
+      <img src="Assets/Drawing.png" alt="A drawing of a stick figure">
+      <span>Jim</span>
+    </main>
   </body>
 </html>
