wrap each img and caption in a figure

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
   <body>
     <main>
       <h1 lang="es">Diseño grafico es mi pasion</h1>
-      <img src="Assets/sandwich cat.webp" alt="A dancing cat">
-      <span>hi</span>
-      <img src="Assets/Bingey.jpg" alt="A golden doodle wearing sunglasses">
-      <span>crickey</span>
-      <img src="Assets/burger.jpg" alt="A hamburger">
-      <span>burger</span>
-      <img src="Assets/Drawing.png" alt="A drawing of a stick figure">
-      <span>Jim</span>
+      <figure>
+        <img src="Assets/sandwich cat.webp" alt="A dancing cat">
+        <figcaption>cat</figcaption>
+      </figure>
+      <figure>
+        <img src="Assets/Bingey.jpg" alt="A golden doodle wearing sunglasses">
+        <figcaption>crickey</figcaption>
+      </figure>
+      <figure>
+        <img src="Assets/burger.jpg" alt="A hamburger">
+        <figcaption>burger</figcaption>
+      </figure>
+      <figure>
+        <img src="Assets/Drawing.png" alt="A drawing of a stick figure">
+        <figcaption>Jim</figcaption>
+      </figure>
     </main>
   </body>
 </html>
